<resources>
    <string name="app_name">CovidFight</string>
    <string name="cotxt">COVID-FIGHT</string>
    <string name="user_types"> Select from here ->(Shopkeeper/Doctor/Normal_User)</string>
    <string name="User_Name">User Name</string>
    <string name="types">User Types</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Submit">Submit</string>
    <string name="shopkeeper">Shopkeeper</string>
    <string name="doctor">Doctor</string>
    <string name="social">Social Distancing</string>
    <string name="awar">Awareness</string>
    <string name="curve">Observe the curve</string>
    <string name="prediction">Observe the prediction</string>
    <string name="dark">See the dark side</string>
    <string name="noti">Notification</string>
    <string name="user">Normal user</string>
    <string name="exit">logout</string>
    <string name="createshop">Create   Shop</string>
    <string name="updateshop">Update   Shop</string>
    <string name="seeallnotification">See  All  Notification</string>
    <string name="viewrequest">View   Request</string>
    <string name="searchbylocation">Search By Location</string>
    <string name="text">Ask Your Question By Putting Up A Question In The Problem</string>
    <string name="title">Enter Question Title</string>
    <string name="description">Enter Description</string>
    <string name="post">Search By post name</string>
    <string name="reminder">Select the time for remind you to wash your hand!!</string>
</resources>
