<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">
        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/social"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="italic" />
        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/awar"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/prediction"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="italic" />
        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/dark"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="italic" />
        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/noti"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/extbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/exit"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="italic" />





    </LinearLayout>

</ScrollView>