<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coback2"
    tools:context=".signup_form">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">
        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/User_Name"
            android:ems="10"
            android:hint="@string/User_Name"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="italic" />
        <EditText
            android:id="@+id/txt_passward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/Passward"
            android:ems="10"
            android:hint="@string/Passward"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="italic" />
        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/User_Name"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="italic"
            tools:ignore="TextFields" />
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded"
            android:text="@string/Register"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>